
syntax = "proto3";
package Protobuf.C2S;

message HeartBeat
{
}