
syntax = "proto3";
package Protobuf.C2S;

message LoginGame
{
        string email = 1;
}